iptables.txt
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Sep  6 19:33:09 2025
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [296857:183219232]
:OUTPUT ACCEPT [192566:150668766]
:POSTROUTING ACCEPT [0:0]
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
-A OUTPUT -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu
COMMIT
# Completed on Sat Sep  6 19:33:09 2025
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Sep  6 19:33:09 2025
*filter
:INPUT ACCEPT [4605:1212172]
:FORWARD DROP [139:115527]
:OUTPUT ACCEPT [140692:113123642]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p udp -m udp --dport 8080 -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FORWARD -i tun0 -o ens1 -j ACCEPT
-A FORWARD -i ens1 -o tun0 -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -p udp -m udp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 53 -j ACCEPT
-A FORWARD -p tcp -m tcp --tcp-flags SYN,RST SYN -j TCPMSS --set-mss 1350
-A FORWARD -f -j ACCEPT
COMMIT
# Completed on Sat Sep  6 19:33:09 2025
# Generated by iptables-save v1.8.11 (nf_tables) on Sat Sep  6 19:33:09 2025
*nat
:PREROUTING ACCEPT [41514:10432704]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [308:33525]
-A PREROUTING -s 10.0.0.0/24 -p tcp -m tcp --dport 53 -j DNAT --to-destination 8.8.8.8:53
-A PREROUTING -s 10.0.0.0/24 -p udp -m udp --dport 53 -j DNAT --to-destination 8.8.8.8:53
-A POSTROUTING -o ens1 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -s 10.0.0.0/24 -o eth0 -j MASQUERADE
-A POSTROUTING -o ens1 -j MASQUERADE
COMMIT
# Completed on Sat Sep  6 19:33:09 2025
